# bliss

./: .clang-format  .cmake-format.yml  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  RELEASE_PROCEDURE  pyproject.toml  setup.py
bland/: CMakeLists.txt  README.md  bland_cuda_archs.hpp.in  slicing_examples.cpp
bland/bland/: CMakeLists.txt  bland_tensor_internals.cpp  config.cpp  demo.cpp  ndarray.cpp  ndarray_deferred.cpp  ndarray_slice.cpp  pybland.cpp
bland/bland/include/bland/: bland.hpp  config.hpp  creators.hpp  ndarray.hpp  ndarray_deferred.hpp  ndarray_slice.hpp  ops.hpp  ops_arithmetic.hpp  ops_comparison.hpp  ops_shape.hpp  ops_statistical.hpp  stride_helper.hpp
bland/bland/include/bland/detail/: bland_tensor_internals.hpp
bland/bland/include/bland/ops/: creators.hpp  ops.hpp  ops_comparison.hpp  ops_frequency.hpp  (+2 more)
bland/bland/internal/: assignment_op.hpp  dispatcher.hpp  elementwise_binary_op.hpp  elementwise_scalar_op.hpp  elementwise_unary_op.hpp  shape_helpers.cpp
bland/bland/ops/: arithmetic.cpp  arithmetic_impl.hpp  arithmetic_scalar.cpp  comparison.cpp  creators.cpp  device_dispatch.hpp  frequency.cpp  ops.cpp  statistical.cpp
bland/bland/ops/cpu/: arithmetic_cpu.cpp  arithmetic_cpu.hpp  arithmetic_cpu_impl.hpp  arithmetic_scalar_cpu.cpp  assignment_op.hpp  comparison_cpu.cpp  comparison_cpu.hpp  comparison_cpu_impl.hpp  elementwise_binary_op.hpp  elementwise_scalar_op.hpp  elementwise_unary_op.hpp  frequency_cpu_impl.cpp  frequency_cpu_impl.hpp  ops_cpu.cpp  ops_cpu.hpp  statistical_cpu.cpp  statistical_cpu.hpp
bland/bland/ops/cuda/: arithmetic_cuda.cu  arithmetic_cuda.cuh  arithmetic_cuda_impl.cuh  arithmetic_scalar_cuda.cu  comparison_cuda.cu  comparison_cuda.cuh  comparison_cuda_impl.cuh  comparison_cuda_impl.hpp  count.cuh  elementwise_binary_op_cuda.cuh  elementwise_scalar_op_cuda.cuh  elementwise_unary_op.cuh  frequency_cuda.cu  frequency_cuda.cuh  ops_cuda.cu  ops_cuda.cuh  statistical.cuh  statistical_cuda.cu
bland/python/: CMakeLists.txt  pybland.cpp  pybland.hpp
bland/tests/: CMakeLists.txt  benchmark_arithmetic.cpp  benchmark_mean.cpp  bland_matchers.hpp  test.cpp  test_arithmetic.cpp  test_comparison.cpp  test_copy.cpp  test_creators.cpp  test_file_io.cpp  test_ndarray.cpp  test_reductions.cpp  test_statistical.cpp  test_strides.cpp
bliss/: CMakeLists.txt  bliss_debug_demo.cpp  bliss_find_hits.cpp  bliss_generate_channelizer_response.cpp  bliss_hits_to_dat.cpp  event_search.cpp  justrun.cpp  read_hits.cpp  test_matx.cu
bliss/convenience/: CMakeLists.txt
bliss/convenience/include/convenience/: datatypedefs.hpp
bliss/core/: CMakeLists.txt  cadence.cpp  coarse_channel.cpp  doppler_spectrum.cpp  event.cpp  filterbank_data.cpp  frequency_drift_plane.cpp  hit.cpp  holoscan_scan.cpp  noise_power.cpp  scan.cpp
bliss/core/include/core/: cadence.hpp  coarse_channel.hpp  doppler_spectrum.hpp  event.hpp  filterbank_data.hpp  flag_values.hpp  frequency_drift_plane.hpp  hit.hpp  integrate_drifts_options.hpp  noise_power.hpp  protohit.hpp  pyblisscore.hpp  scan.hpp
bliss/drift_search/: CMakeLists.txt  compute_drift_rates.cpp  connected_components.cpp  event_search.cpp  filter_hits.cpp  hit_search.cpp  integrate_and_search.cpp  integrate_drifts.cpp  local_maxima.cpp  protohit_search.cpp
bliss/drift_search/include/drift_search/: compute_drift_rates.hpp  connected_components.hpp  event_search.hpp  filter_hits.hpp  hit_search.hpp  hit_search_options.hpp  integrate_and_search.hpp  integrate_drifts.hpp  local_maxima.hpp  protohit_search.hpp  pydrift_search.hpp
bliss/drift_search/kernels/: connected_components_cpu.cpp  connected_components_cpu.hpp  connected_components_cuda.cu  connected_components_cuda.cuh  connected_components_driftblock_cuda.cu  connected_components_driftblock_cuda.cuh  drift_integration_bland.cpp  drift_integration_bland.hpp  drift_integration_cpu.cpp  drift_integration_cpu.hpp  drift_integration_cuda.cu  drift_integration_cuda.cuh  local_maxima_cpu.cpp  local_maxima_cpu.hpp  local_maxima_cuda.cu  local_maxima_cuda.cuh
bliss/estimators/: CMakeLists.txt  noise_estimate.cpp  spectral_kurtosis.cpp
bliss/estimators/include/estimators/: noise_estimate.hpp  pyestimators.hpp  spectral_kurtosis.hpp
bliss/file_types/: CMakeLists.txt  README.md  cpnp_files.cpp  dat_file.cpp  events_file.cpp  filterbank_data.cpp  h5_filterbank_file.cpp  hit.capnp  hits_file.cpp  pyfile_types.hpp
bliss/file_types/detail/: cpnp_hit_builder.cpp  cpnp_hit_builder.hpp  raii_file_helpers.cpp  raii_file_helpers.hpp
bliss/file_types/include/file_types/: cpnp_files.hpp  dat_file.hpp  events_file.hpp  filterbank_data.hpp  h5_filterbank_file.hpp  hit.capnp.c++  hit.capnp.h  hits_file.hpp  pyfile_types.hpp
bliss/flaggers/: CMakeLists.txt  filter_rolloff.cpp  kurtosis.cpp  magnitude.cpp  sigmaclip.cpp  spectral_kurtosis.cpp
bliss/flaggers/include/flaggers/: filter_rolloff.hpp  flag_values.hpp  kurtosis.hpp  magnitude.hpp  pyflaggers.hpp  sigmaclip.hpp  spectral_kurtosis.hpp
bliss/preprocess/: CMakeLists.txt  excise_dc.cpp  holoscan_preprocess.cpp  hs_preprocess.cpp  normalize.cpp  passband_static_equalize.cpp
bliss/preprocess/include/preprocess/: excise_dc.hpp  normalize.hpp  passband_static_equalize.hpp  pypreprocess.hpp
bliss/python/: CMakeLists.txt  pybliss.cpp
bliss/python/bliss/: __init__.py
bliss/python/bliss/plot_utils/: __init__.py  _encodings.py  plot_hits.py
bliss/python/blissdedrift/: __init__.py
bliss/python/blissdedrift/plot_utils/: __init__.py  _encodings.py  plot_hits.py  scatter_matrix.py
bliss/rfi/: CMakeLists.txt  rfi.cpp
bliss/rfi/include/rfi/: rfi.hpp
bliss/spectrumsum/: CMakeLists.txt  hit_search.cpp  pyspectrumsum.cpp  spectrumsum.cpp
bliss/spectrumsum/include/spectrumsum/: hit_search.hpp  spectrumsum.hpp
bliss/tests/: CMakeLists.txt  test_capnp_roundtrip.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  dedrift.rst  event_search.rst  flaggers.rst  hit_search.rst  index.rst  install.rst  noise_estimation.rst  preprocessing.rst  python-cuda-matrix  theory_of_operation.rst
(+17 files in other folders)
