[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "bliss"
version = "0.0.1"
description = "Toolkit and applications to search radio astronomy data for narrowband doppler-drifting signals"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Nathan West", email = "nathan@quadrature.dev" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/n-west/bliss"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build-py/{wheel_tag}"

# Build stable ABI wheels for CPython 3.9+
wheel.py-api = "cp39"

# there is a bug with ubuntu packaging + gcc that manifests through libatomic by way of capnproto
# https://github.com/chaincodelabs/libmultiprocess/issues/68
cmake.define = { "CMAKE_C_COMPILER"= "/usr/bin/clang", "CMAKE_CXX_COMPILER"= "/usr/bin/clang++" }
# cmake.args = []


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
