[project]
name = "bliss-dedrift"
readme = "README.md"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Nathan West", "email" = "nathan@quadrature.dev" }]
keywords = ["seti", "technosignature", "radio astronomy", "sdr", "spectrum", "dedoppler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU",
]
dependencies = ["numpy", "matplotlib"]
dynamic = ["version", "description"]


[build-system]
requires = [
    "py-build-cmake~=0.2.0a7",
    "cmake~=3.29.0",
    "ninja"
]

build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "blissdedrift" # Import name
directory = "bliss/python/"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "bland/", "bliss/*", "Doxyfile.in", "LICENSE", "README.md"]
exclude = []

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
build_type = "RelWithDebInfo"
source_path = "." # Containing CMakeLists.txt
build_path = "build"
options = { "WITH_PY_STUBS:BOOL" = "On" }
args = ["-Wdev"]
find_python = true
build_args = []
build_tool_args = []
install_args = ["--verbose"]
install_components = ["python_modules"]

[tool.py-build-cmake.linux.cmake] # Linux-specific options
#generator = "Ninja Multi-Config"
generator = "Unix Makefiles"
config = ["RelWithDebInfo"]
build_args = ["-j", "8"]

[tool.py-build-cmake.editable]
mode = "symlink"  # Choose the desired mode (wrapper, hook, or symlink)

[tool.py-build-cmake.stubgen]
args = ["-v"]

